kube-manifests/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    #kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx
  rules:
  - host: learn.practicecloud.co
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-nginx-clusterip-service
              port: 
                number: 80
  tls:
  - hosts:   
    - learn.practicecloud.co
    secretName: myingress-cert
